--- a/jeka-catalog.properties
+++ b/jeka-catalog.properties
@@ -6,7 +6,7 @@ app.demo-springboot-angular.repo=https://github.com/jeka-dev/demo-project-spring
 app.demo-springboot-angular.desc=Manage a list of users. Written in Springboot and Angular
 app.demo-springboot-angular.type=SERVER-UI
 
-app.demo-springboot-reactjs.repo=https://github.com/jeka-dev/demo-build-convention-consumer.git
+app.demo-springboot-reactjs.repo=https://github.com/jeka-dev/demo-build-conventions-consumer
 app.demo-springboot-reactjs.desc=A Springboot app with reactJS front-end to manage coffee shops.
 app.demo-springboot-reactjs.type=SERVER-UI
 
