--- a/jeka-catalog.properties
+++ b/jeka-catalog.properties
@@ -11,5 +11,5 @@ app.demo-springboot-reactjs.desc=A Springboot app with reactJS front-end to mana
 app.demo-springboot-reactjs.type=SERVER-UI
 
 app.demo-quarkus-maven.repo=https://github.com/jeka-dev/demo-maven-jeka-quarkus.git
-app.demo-quarkus-maven.desc=Manage a basket of fruit. Written with Quarkus. Building using Maven.
+app.demo-quarkus-maven.desc=Manage a basket of fruit. Written with Quarkus, built with Maven.
 app.demo-quarkus-maven.type=SERVER-UI
