Enhance Quarkus Maven demo description
Updated description to include 'run in native mode'.

--- a/jeka-catalog.properties
+++ b/jeka-catalog.properties
@@ -14,5 +14,5 @@ app.demo-springboot-reactjs.type=SERVER-UI
 app.demo-springboot-reactjs.native=true
 
 app.demo-quarkus-maven.repo=https://github.com/jeka-dev/demo-maven-jeka-quarkus.git
-app.demo-quarkus-maven.desc=Manage a basket of fruit. Written with Quarkus, built with Maven.
+app.demo-quarkus-maven.desc=Manage a basket of fruit. Written with Quarkus, built with Maven, run in native mode.
 app.demo-quarkus-maven.type=SERVER-UI
